Ensure standard PR/push action does not run on master and feature/**

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,11 @@
 name: Java CI with Gradle
 
-on: [push, pull_request]
+on:
+  push:
+    branches-ignore:
+      - 'master'
+      - 'feature/**'
+  pull_request:
 
 jobs:
   build:
