--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,37 +1,26 @@
-name: Java CI with Gradle
+name: Build
 
 on:
+  workflow_dispatch:
   push:
-    branches-ignore:
-      - 'master'
-      - 'feature/**'
-  pull_request:
 
 jobs:
-  build:
-    # Only run on PRs if the source branch is on someone else's repo
-    if: "${{ github.event_name != 'pull_request' || github.repository != github.event.pull_request.head.repo.full_name }}"
+    build:
+        runs-on: ubuntu-latest
+        steps:
+            - name: Setup Gradle
+              uses: GeyserMC/actions/setup-gradle-composite@master
+              with:
+                  setup-java_java-version: 17
 
-    runs-on: ubuntu-latest
+            - name: Build MCPL
+              run: ./gradlew build
 
-    steps:
-      - name: Checkout repository
-        # See https://github.com/actions/checkout/commits
-        uses: actions/checkout@3df4ab11eba7bda6032a0b82a6bb43b11571feac
-
-      - name: Validate Gradle wrapper
-        # See https://github.com/gradle/wrapper-validation-action/commits
-        uses: gradle/wrapper-validation-action@342dbebe7272035434f9baccc29a816ec6dd2c7b
-
-      - name: Set up JDK 17
-        # See https://github.com/actions/setup-java/commits
-        uses: actions/setup-java@0ab4596768b603586c0de567f2430c30f5b0d2b0
-        with:
-          java-version: 17
-          distribution: temurin
-
-      - name: Build
-        # See https://github.com/gradle/gradle-build-action/commits
-        uses: gradle/gradle-build-action@3bfe3a46584a206fb8361cdedd0647b0c4204232
-        with:
-          arguments: build
+            - name: Publish to Maven Repository
+              if: ${{ success() && github.repository == 'GeyserMC/MCProtocolLib' && (github.ref_name == 'master' || startsWith(github.ref_name, 'feature/')) }}
+              uses: gradle/gradle-build-action@3bfe3a46584a206fb8361cdedd0647b0c4204232
+              env:
+                  ORG_GRADLE_PROJECT_geysermcUsername: ${{ vars.DEPLOY_USER }}
+                  ORG_GRADLE_PROJECT_geysermcPassword: ${{ secrets.DEPLOY_PASS }}
+              with:
+                  arguments: publish
